Intellij warning fix took intellij's advice and fixed many of the warnings.